# kireji

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: main.cpp
benchmarks/src/parser/: Http10ParserBenchmark.cpp
benchmarks/src/shared/: HeaderMapBenchmark.cpp  OptionBenchmark.cpp  VecBenchmark.cpp
docs/: CMakeLists.txt  Doxygen.in
docs/writerside/: c.list  k.tree  v.list  writerside.cfg
docs/writerside/cfg/: buildprofiles.xml
examples/hello_kireji/: CMakeLists.txt
include/parser/: Http10Parser.hpp
include/shared/: HeaderMap.hpp  HttpRequest.hpp  IHttpParser.hpp  Option.hpp  Vec.hpp
src/parser/: Http10Parser.cpp
src/shared/: HeaderMap.cpp  HttpRequest.cpp  IHttpParser.cpp  Option.cpp  Vec.cpp
src/shared/HttpRequest/: parseHttpRequest.cpp
tests/: CMakeLists.txt
tests/include/parser/: HttpTestHelpers.hpp
tests/src/parser/: Http10ParserBasicsTest.cpp  Http10ParserBufferingTest.cpp  Http10ParserFailureTest.cpp  Http10ParserTest.cpp  HttpTestHelpers.cpp
tests/src/shared/: HeaderMapTest.cpp  HttpRequestTest.cpp  OptionTest.cpp  ParseHttpMethodTest.cpp  VecTest.cpp
